deploy: fd53598626e36e8cce760bc7b293c63c427415fe

--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac477ae1",
+   "id": "61ebad43",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b76c3839",
+   "id": "2bd9647e",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c643272e",
+   "id": "dcc2276d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93fcbeab",
+   "id": "266c61e3",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422c17fa",
+   "id": "48f3c4da",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bde3c25",
+   "id": "cb4b0099",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "170ee867",
+   "id": "e3c79b74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:48.894099Z",
-     "iopub.status.busy": "2026-01-30T17:10:48.893845Z",
-     "iopub.status.idle": "2026-01-30T17:10:52.141488Z",
-     "shell.execute_reply": "2026-01-30T17:10:52.140284Z"
+     "iopub.execute_input": "2026-01-30T17:22:25.164490Z",
+     "iopub.status.busy": "2026-01-30T17:22:25.164237Z",
+     "iopub.status.idle": "2026-01-30T17:22:28.089406Z",
+     "shell.execute_reply": "2026-01-30T17:22:28.088700Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4797ab4",
+   "id": "bdb29b4c",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a98ee6",
+   "id": "21de2c2c",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200e02ba",
+   "id": "463a37ad",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6ffedf",
+   "id": "ee27f386",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a9ac30",
+   "id": "285f2233",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f1be7a",
+   "id": "8dbe68c4",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf40e75",
+   "id": "98bce95c",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456b4540",
+   "id": "0f2c8061",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e68ab92",
+   "id": "acf16acd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:52.143815Z",
-     "iopub.status.busy": "2026-01-30T17:10:52.143404Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.537386Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.536470Z"
+     "iopub.execute_input": "2026-01-30T17:22:28.092110Z",
+     "iopub.status.busy": "2026-01-30T17:22:28.091593Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.239133Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.238274Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec057bf6",
+   "id": "16d0d1a4",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb9cd637",
+   "id": "221b6e0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.539275Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.539078Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.543010Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.541940Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.241036Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.240826Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.244529Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.243660Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b02f0b8",
+   "id": "be2b779d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f765a59",
+   "id": "21db8ea2",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a1c24a",
+   "id": "0778cacf",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d70621a1",
+   "id": "08378b0a",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9aa0f121",
+   "id": "26227e08",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.544831Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.544650Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.594583Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.593640Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.246236Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.246030Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.292448Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.291403Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec669208",
+   "id": "4fb0980d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d6ac00a2",
+   "id": "d94f15d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.596319Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.596139Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.669998Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.668943Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.294247Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.294069Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.365254Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.364441Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684355ea",
+   "id": "3cac9f3f",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f2e039",
+   "id": "483750e1",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3afab5a5",
+   "id": "74e2c3f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.671809Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.671632Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.701752Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.700785Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.367472Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.367277Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.395601Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.394694Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98deca90",
+   "id": "2c01ac95",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c6c9d84",
+   "id": "f433ee5d",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ab0431",
+   "id": "e7162a08",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcff0d85",
+   "id": "47735ccc",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01c69958",
+   "id": "92c4d49d",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "66155d6f",
+   "id": "25be9317",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.703630Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.703452Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.708259Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.707090Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.397507Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.397319Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.401856Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.400903Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f1e6353",
+   "id": "e5ee68c7",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "16ffad40",
+   "id": "15fa190d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.709895Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.709724Z",
-     "iopub.status.idle": "2026-01-30T17:10:54.713002Z",
-     "shell.execute_reply": "2026-01-30T17:10:54.712040Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.403460Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.403294Z",
+     "iopub.status.idle": "2026-01-30T17:22:30.406759Z",
+     "shell.execute_reply": "2026-01-30T17:22:30.405662Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e169450c",
+   "id": "2a7369b5",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "86b1088a",
+   "id": "ddf39aca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:54.714601Z",
-     "iopub.status.busy": "2026-01-30T17:10:54.714416Z",
-     "iopub.status.idle": "2026-01-30T17:10:57.371995Z",
-     "shell.execute_reply": "2026-01-30T17:10:57.371058Z"
+     "iopub.execute_input": "2026-01-30T17:22:30.408328Z",
+     "iopub.status.busy": "2026-01-30T17:22:30.408166Z",
+     "iopub.status.idle": "2026-01-30T17:22:32.985238Z",
+     "shell.execute_reply": "2026-01-30T17:22:32.984202Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f20caed",
+   "id": "a6a9cac1",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06011100",
+   "id": "1fbf6827",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "326999fb",
+   "id": "15a29e9c",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b91d99",
+   "id": "38222767",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a2be367a",
+   "id": "b115944f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:57.373865Z",
-     "iopub.status.busy": "2026-01-30T17:10:57.373667Z",
-     "iopub.status.idle": "2026-01-30T17:10:57.377578Z",
-     "shell.execute_reply": "2026-01-30T17:10:57.376687Z"
+     "iopub.execute_input": "2026-01-30T17:22:32.987066Z",
+     "iopub.status.busy": "2026-01-30T17:22:32.986851Z",
+     "iopub.status.idle": "2026-01-30T17:22:32.990784Z",
+     "shell.execute_reply": "2026-01-30T17:22:32.989944Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f1f4d12bf60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f2bed5bbf60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a2aeea",
+   "id": "32a35744",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8baa003e",
+   "id": "ba160f4f",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "570315e3",
+   "id": "4abcd4e6",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "721e3a26",
+   "id": "6da9f185",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "624b2f56",
+   "id": "92eb38da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:57.379634Z",
-     "iopub.status.busy": "2026-01-30T17:10:57.379444Z",
-     "iopub.status.idle": "2026-01-30T17:10:57.382722Z",
-     "shell.execute_reply": "2026-01-30T17:10:57.381832Z"
+     "iopub.execute_input": "2026-01-30T17:22:32.992897Z",
+     "iopub.status.busy": "2026-01-30T17:22:32.992691Z",
+     "iopub.status.idle": "2026-01-30T17:22:32.996136Z",
+     "shell.execute_reply": "2026-01-30T17:22:32.995191Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "098e31e2",
+   "id": "b4148a98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:10:57.384722Z",
-     "iopub.status.busy": "2026-01-30T17:10:57.384537Z",
-     "iopub.status.idle": "2026-01-30T17:10:58.463202Z",
-     "shell.execute_reply": "2026-01-30T17:10:58.462089Z"
+     "iopub.execute_input": "2026-01-30T17:22:32.997773Z",
+     "iopub.status.busy": "2026-01-30T17:22:32.997568Z",
+     "iopub.status.idle": "2026-01-30T17:22:34.059520Z",
+     "shell.execute_reply": "2026-01-30T17:22:34.058639Z"
     }
    },
    "outputs": [
