deploy: fc3c063493b465f470caee1b36ce387f5e53e959

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72ef7ab2",
+   "id": "dab71ce4",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94d88643",
+   "id": "f4172199",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2421e93b",
+   "id": "c9cd6906",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91642dae",
+   "id": "2e585ea6",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02063b5",
+   "id": "602fcb7e",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82126bb2",
+   "id": "494eeee6",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2d9e86a1",
+   "id": "cef9f697",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:38.980386Z",
-     "iopub.status.busy": "2026-01-30T17:24:38.980182Z",
-     "iopub.status.idle": "2026-01-30T17:24:41.981803Z",
-     "shell.execute_reply": "2026-01-30T17:24:41.980806Z"
+     "iopub.execute_input": "2026-01-30T17:46:58.175294Z",
+     "iopub.status.busy": "2026-01-30T17:46:58.175114Z",
+     "iopub.status.idle": "2026-01-30T17:47:01.197620Z",
+     "shell.execute_reply": "2026-01-30T17:47:01.196804Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f612ad72",
+   "id": "30e82a48",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a980a36a",
+   "id": "b33241d6",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c81e7446",
+   "id": "ac581c07",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "410710c2",
+   "id": "cddf23f5",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "233fef8d",
+   "id": "238b9d7b",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f7dfac",
+   "id": "14af7559",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cfa9c14",
+   "id": "9d6b2df8",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7204079c",
+   "id": "92120442",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cccef29a",
+   "id": "b155c5f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:41.983993Z",
-     "iopub.status.busy": "2026-01-30T17:24:41.983682Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.821959Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.820982Z"
+     "iopub.execute_input": "2026-01-30T17:47:01.199995Z",
+     "iopub.status.busy": "2026-01-30T17:47:01.199717Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.048577Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.047465Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8837d7a",
+   "id": "8669a837",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e1a81df",
+   "id": "ca7961c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.823861Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.823663Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.827808Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.826707Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.050305Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.050106Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.054519Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.053202Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d082bf",
+   "id": "03f26bc8",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b05ecf3",
+   "id": "8f38b6c7",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e78b82",
+   "id": "6944697a",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "805d64be",
+   "id": "9b8434b8",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9fdb91c5",
+   "id": "d36770ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.829606Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.829417Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.871518Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.870646Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.056346Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.056158Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.101803Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.100995Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de3e5025",
+   "id": "6e8816db",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fd74005d",
+   "id": "a0cf0cdd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.873212Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.873008Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.936570Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.935860Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.103988Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.103799Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.170620Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.169739Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d6b19b",
+   "id": "67d3dbd4",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5a05b9b",
+   "id": "fb421ee8",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34ad3b75",
+   "id": "c86a5be4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.938788Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.938573Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.964761Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.963817Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.172666Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.172444Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.199024Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.198087Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998e3b19",
+   "id": "c9c65f68",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f0fbac",
+   "id": "15978502",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f23ef4",
+   "id": "b49cd8e6",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd81cd19",
+   "id": "4f64a2b7",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f015a9",
+   "id": "e5a6a107",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "982e5acd",
+   "id": "3298008c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.966642Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.966445Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.971009Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.969999Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.200793Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.200617Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.205075Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.204166Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a42ff0b3",
+   "id": "7757d2ef",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fe80ec0c",
+   "id": "651db4bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.972701Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.972515Z",
-     "iopub.status.idle": "2026-01-30T17:24:43.975547Z",
-     "shell.execute_reply": "2026-01-30T17:24:43.974759Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.206907Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.206727Z",
+     "iopub.status.idle": "2026-01-30T17:47:03.209983Z",
+     "shell.execute_reply": "2026-01-30T17:47:03.209169Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d01de79",
+   "id": "552b1c98",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2e5e4a38",
+   "id": "daf0525f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:43.977192Z",
-     "iopub.status.busy": "2026-01-30T17:24:43.976984Z",
-     "iopub.status.idle": "2026-01-30T17:24:46.470345Z",
-     "shell.execute_reply": "2026-01-30T17:24:46.469467Z"
+     "iopub.execute_input": "2026-01-30T17:47:03.211801Z",
+     "iopub.status.busy": "2026-01-30T17:47:03.211635Z",
+     "iopub.status.idle": "2026-01-30T17:47:05.745898Z",
+     "shell.execute_reply": "2026-01-30T17:47:05.744916Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0114f8bd",
+   "id": "09ec7cf1",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d863127",
+   "id": "a546c3ad",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8189de0",
+   "id": "2b8ebe90",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b872e42c",
+   "id": "6995cde2",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b2237397",
+   "id": "e8573f88",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:46.472282Z",
-     "iopub.status.busy": "2026-01-30T17:24:46.472066Z",
-     "iopub.status.idle": "2026-01-30T17:24:46.475780Z",
-     "shell.execute_reply": "2026-01-30T17:24:46.474670Z"
+     "iopub.execute_input": "2026-01-30T17:47:05.747732Z",
+     "iopub.status.busy": "2026-01-30T17:47:05.747513Z",
+     "iopub.status.idle": "2026-01-30T17:47:05.751156Z",
+     "shell.execute_reply": "2026-01-30T17:47:05.750409Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f255a8eb420>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f792d8e3240>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f26e278",
+   "id": "8fdfdf01",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e555335a",
+   "id": "1a9a021e",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0c8a83",
+   "id": "5855887a",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35db0343",
+   "id": "0a101fdf",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "72def7b6",
+   "id": "11994895",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:46.477462Z",
-     "iopub.status.busy": "2026-01-30T17:24:46.477278Z",
-     "iopub.status.idle": "2026-01-30T17:24:46.480444Z",
-     "shell.execute_reply": "2026-01-30T17:24:46.479720Z"
+     "iopub.execute_input": "2026-01-30T17:47:05.753054Z",
+     "iopub.status.busy": "2026-01-30T17:47:05.752870Z",
+     "iopub.status.idle": "2026-01-30T17:47:05.756288Z",
+     "shell.execute_reply": "2026-01-30T17:47:05.755260Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "53ec66d9",
+   "id": "4196dc91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-30T17:24:46.482306Z",
-     "iopub.status.busy": "2026-01-30T17:24:46.482138Z",
-     "iopub.status.idle": "2026-01-30T17:24:47.550673Z",
-     "shell.execute_reply": "2026-01-30T17:24:47.549840Z"
+     "iopub.execute_input": "2026-01-30T17:47:05.758076Z",
+     "iopub.status.busy": "2026-01-30T17:47:05.757893Z",
+     "iopub.status.idle": "2026-01-30T17:47:06.818637Z",
+     "shell.execute_reply": "2026-01-30T17:47:06.817588Z"
     }
    },
    "outputs": [
